--- a/data-analysis/028-pandas-json_normalize/pandas-json_normalize.ipynb
+++ b/data-analysis/028-pandas-json_normalize/pandas-json_normalize.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas json_normalize()\n",
+    "# Pandas json_normalize - Tratamento ETL()\n",
     "\n",
     "This is a notebook for the medium article [Pandas json_normalize()](https://bindichen.medium.com/all-pandas-json-normalize-you-should-know-for-flattening-json-13eae1dfb7dd)\n",
     "\n",
