--- a/data-analysis/047-pandas-x-ways-to-filter-dataframe/Untitled.ipynb
+++ b/data-analysis/047-pandas-x-ways-to-filter-dataframe/Untitled.ipynb
@@ -16,7 +16,10 @@
     "* https://www.youtube.com/watch?v=2AFGPdNn4FM\n",
     "* https://levelup.gitconnected.com/filtering-data-in-pandas-c7b60d1e1301\n",
     "* https://python.plainenglish.io/pandas-query-dynamic-data-filtering-14633caa8cab\n",
-    "* https://sayahfares.medium.com/pandas-cookbook-all-that-you-need-to-start-working-with-pandas-1c9c2535a103"
+    "* https://sayahfares.medium.com/pandas-cookbook-all-that-you-need-to-start-working-with-pandas-1c9c2535a103\n",
+    "* https://towardsdatascience.com/20-examples-to-master-filtering-pandas-dataframes-df6fabfe126f\n",
+    "* https://python.plainenglish.io/filtering-rows-and-columns-in-pandas-python-techniques-you-must-know-6cdfc32c614c\n",
+    "* https://gmyrianthous.medium.com/how-to-select-rows-between-two-dates-in-pandas-c6dd6d33ef8"
    ]
   },
   {
@@ -43,7 +46,13 @@
     "\n",
     "7. Loc and iloc\n",
     "\n",
-    "8. notnull()"
+    "8. notnull()\n",
+    "\n",
+    "9. filter()\n",
+    "\n",
+    "10. slicing https://python.plainenglish.io/slicing-data-in-pandas-python-most-commonly-used-techniques-to-slice-and-subset-real-life-data-24b0a99eb7c0\n",
+    "\n",
+    "11. Selecting rows between two dates"
    ]
   },
   {
