--- a/python/0003-lambda-expression/python-lambda.ipynb
+++ b/python/0003-lambda-expression/python-lambda.ipynb
@@ -13,7 +13,9 @@
     "* https://www.youtube.com/watch?v=25ovCm9jKfA \n",
     "* https://www.youtube.com/watch?v=Ob9rY6PQMfI\n",
     "* https://towardsdatascience.com/three-functions-to-know-in-python-4f2d27a4d05 \n",
-    "* https://towardsdatascience.com/the-power-of-lambda-expressions-in-python-c5a1dcea9837![image.png](attachment:image.png)"
+    "* https://towardsdatascience.com/the-power-of-lambda-expressions-in-python-c5a1dcea9837![image.png](attachment:image.png)\n",
+    "* lambda best practices https://medium.com/@Hong_Tang/five-tips-for-using-lambda-function-in-python-de0733ecc0e7\n",
+    "* https://realpython.com/python-lambda/"
    ]
   },
   {
