--- a/python/0007-json/python-json.ipynb
+++ b/python/0007-json/python-json.ipynb
@@ -24,8 +24,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version of packages used in this Notebook"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python:  3.7.6 (default, Jan  8 2020, 13:42:34) \n",
+      "[Clang 4.0.1 (tags/RELEASE_401/final)]\n",
+      "json:  2.0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import json # Python's built-in json module\n",
+    "\n",
+    "# Make sure your package version >= them\n",
+    "print('python: ', sys.version)\n",
+    "print('json: ', json.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Bob', 'language': ['English', 'French']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(person_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,26 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Bob', 'language': ['English', 'French']}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "person_dict"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,7 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('person.json') as f:\n",
+    "    data_dict = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -121,19 +168,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "with open('person.json') as f:\n",
-    "    data = json.load(f)\n",
-    "    \n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Python Data to JSON string"
+    "print(data_dict)"
    ]
   },
   {
@@ -145,7 +180,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"name\": \"Bob\", \"age\": 12, \"children\": null}\n"
+      "['English', 'Fench']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_dict['languages'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Python Data to JSON string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": \"Bob\", \"age\": 12, \"children\": null, \"number\": [1, 2]}\n"
      ]
     }
    ],
@@ -155,7 +214,8 @@
     "person_dict = {\n",
     "    'name': 'Bob',\n",
     "    'age': 12,\n",
-    "    'children': None\n",
+    "    'children': None,\n",
+    "    'number': [1, 2]\n",
     "}\n",
     "\n",
     "person_json = json.dumps(person_dict)\n",
@@ -172,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -181,11 +241,11 @@
      "text": [
       "{\n",
       "    \"name\": \"Bob\",\n",
-      "    \"languages\": \"English\",\n",
-      "    \"numbers\": [\n",
-      "        2,\n",
-      "        1.6,\n",
-      "        null\n",
+      "    \"age\": 12,\n",
+      "    \"children\": null,\n",
+      "    \"number\": [\n",
+      "        1,\n",
+      "        2\n",
       "    ]\n",
       "}\n"
      ]
@@ -196,9 +256,7 @@
     "# the json.dumps() function takes an indent argument that automatically formats things legibly for you:\n",
     "person_json = json.dumps(person_dict, indent=4)\n",
     "\n",
-    "print(person_json)\n",
-    "\n",
-    "# + table to show JSON -> Python"
+    "print(person_json)"
    ]
   },
   {
@@ -213,7 +271,11 @@
       "{\n",
       "    \"age\": 12,\n",
       "    \"children\": null,\n",
-      "    \"name\": \"Bob\"\n",
+      "    \"name\": \"Bob\",\n",
+      "    \"number\": [\n",
+      "        1,\n",
+      "        2\n",
+      "    ]\n",
       "}\n"
      ]
     }
@@ -284,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +387,10 @@
     "\n",
     "\n",
     "```\n",
-    "⇒  echo '{\"json\": \"obj\"}' | python -m json.tool\n",
+    "⇒  echo '{\"name\": \"Bob\"}' | python -m json.tool\n",
     "\n",
     "{\n",
-    "    \"json\": \"obj\"\n",
+    "    \"name\": \"Bob\"\n",
     "}\n",
     "```"
    ]
