--- a/traditional-machine-learning/0016-k-means-introduction/Untitled.ipynb
+++ b/traditional-machine-learning/0016-k-means-introduction/Untitled.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://towardsdatascience.com/confused-by-multi-index-in-pandas-9-essential-operations-to-know-e6aec29ee6d8\n",
+    "# Introduction to k-Mean\n",
     "\n",
-    "https://medium.com/swlh/reshaping-in-pandas-with-stack-and-unstack-functions-bb169f64467d"
+    "\n",
+    "* https://medium.com/towards-data-science/k-means-clustering-explain-it-to-me-like-im-10-e0badf10734a"
    ]
   },
   {
