--- a/traditional-machine-learning/0017-top-classification-algorithms/Untitled.ipynb
+++ b/traditional-machine-learning/0017-top-classification-algorithms/Untitled.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://towardsdatascience.com/confused-by-multi-index-in-pandas-9-essential-operations-to-know-e6aec29ee6d8\n",
+    "# Top classification algorithms\n",
     "\n",
-    "https://medium.com/swlh/reshaping-in-pandas-with-stack-and-unstack-functions-bb169f64467d"
+    "* https://towardsdatascience.com/top-machine-learning-algorithms-for-classification-2197870ff501"
    ]
   },
   {
