--- a/traditional-machine-learning/011-support-vector-machine/Untitled.ipynb
+++ b/traditional-machine-learning/011-support-vector-machine/Untitled.ipynb
@@ -12,7 +12,8 @@
     "* https://www.geeksforgeeks.org/ml-using-svm-to-perform-classification-on-a-non-linear-dataset/?ref=lbp\n",
     "* https://towardsdatascience.com/support-vector-machine-simply-explained-fee28eba5496\n",
     "* https://www.aitude.com/svm-difference-between-linear-and-non-linear-models/\n",
-    "* hands-on machine learning - chapter 5\n"
+    "* hands-on machine learning - chapter 5\n",
+    "* https://towardsdatascience.com/top-machine-learning-algorithms-for-classification-2197870ff501\n"
    ]
   },
   {
