--- a/data-analysis/073-pandas-combine/pandas-combine.ipynb
+++ b/data-analysis/073-pandas-combine/pandas-combine.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://towardsdatascience.com/how-to-replace-values-in-pandas-609ba7a031c9\n",
-    "https://datatofish.com/replace-values-pandas-dataframe/\n",
+    "# Combine a Dataframe conditionally with other using Pandas `combine()`\n",
     "\n",
-    "* replace\n",
-    "* where\n",
-    "* numpy select"
+    "This is a Notebook for the medium article [How to flatten MultiIndex Columns and Rows in Pandas](https://bindichen.medium.com/how-to-flatten-multiindex-columns-and-rows-in-pandas-f5406c50e569)\n",
+    "\n",
+    "Please read article for instructions. \n",
+    "\n",
+    "**License**: [BSD 2-Clause](https://opensource.org/licenses/BSD-2-Clause). Not for commercial use!!!\n",
+    "\n",
+    "\n",
+    "* https://blog.devgenius.io/pandas-dataframe-combine-function-b0278f8f9d7"
    ]
   },
   {
