--- a/data-analysis/076-pandas-series-advanced/pandas-series-advanced.ipynb
+++ b/data-analysis/076-pandas-series-advanced/pandas-series-advanced.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d88811ca",
    "metadata": {},
    "source": [
-    "* https://blog.devgenius.io/pandas-dataframe-combine-function-b0278f8f9d7"
+    "https://towardsdatascience.com/6-fundamental-questions-when-working-with-a-pandas-series-1d142b5fba4e"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d374c1dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -17,9 +19,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-tutorial",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -31,9 +33,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
