--- a/data-analysis/069-pandas-flatten-multiIndex/flatten-multiindex.ipynb
+++ b/data-analysis/069-pandas-flatten-multiIndex/flatten-multiindex.ipynb
@@ -1461,9 +1461,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-tutorial",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1475,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
