--- a/data-analysis/072-pandas-resample-all/Untitled.ipynb
+++ b/data-analysis/072-pandas-resample-all/Untitled.ipynb
@@ -17,9 +17,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-tutorial",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -31,7 +31,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
